attempt to fix header search bar mobile collapse

--- a/client/src/pages/home-page/home-page.styles.scss
+++ b/client/src/pages/home-page/home-page.styles.scss
@@ -4,7 +4,6 @@
 
   .deck-list-heading {
     display: flex;
-    border-bottom: 1px solid black;
     
       .deck-title {
         margin: 1vw 0 0 0;
